full project modified

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
   min-height: 74px;
-  border-bottom: 1px solid #545454b3;
-  margin-bottom: 40px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  box-sizing: border-box;
+  margin: 0 -19px 40px -19px;
+  padding: 0 19px 0 19px;
 }
 
 @media screen and (max-width: 600px) {
