--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,4 +4,12 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+  margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
