--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,7 +8,8 @@
 
 @media screen and (max-width: 1000px) {
   .page {
-    padding: 45px 19px 60px;
+    padding-left: 19px;
+    padding-right: 19px;
   }
 }
 
