--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,11 +2,9 @@
   box-sizing: border-box;
   max-width: 430px;
   width: 100%;
-  height: 330px;
-  position: absolute;
+  min-height: 330px;
+  position: relative;
   z-index: 2;
-  top: calc(50% - 175px);
-  left: calc(50% - 215px);
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -20,8 +18,6 @@
   .popup__container {
     max-width: 282px;
     padding: 25px 22px;
-    height: 322px;
-    top: calc(50% - 161px);
-    left: calc(50% - 141px);
+    min-height: 322px;
   }
 }
