--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,10 +8,15 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  padding: 0;
 }
 
 .popup__input:last-of-type {
-  margin-bottom: 0;
+  margin-bottom: 48px;
+}
 
-
+@media screen and (max-width: 600px) {
+  .popup__input:last-of-type {
+    margin-bottom: 45px;
+  }
 }
