--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,13 +4,14 @@
   background: #000000;
   border-radius: 2px;
   margin-top: auto;
-
+  border: none;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
+  padding: 0;
 }
 
 .popup__save-button:hover {
