--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,11 +2,11 @@
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 2px;
-  background-color: transparent;
   width: 150px;
   height: 50px;
   align-self: center;
-  background: url("../../../images/plus-sign.svg") 50% 50% no-repeat;
+  background: transparent url("../../../images/plus-sign.svg") 50% 50% no-repeat;
+  background-size: 22px 22px;
 }
 
 .profile__add-button:hover {
@@ -18,5 +18,11 @@
   .profile__add-button {
     width: 100%;
     margin-top: 36px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__add-button {
+    background-size: 16px 16px;
   }
 }
