--- a/blocks/profile/__calling/profile__calling.css
+++ b/blocks/profile/__calling/profile__calling.css
@@ -5,11 +5,16 @@
   line-height: 22px;
   color: #ffffff;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 600px) {
   .profile__calling {
     font-size: 14px;
     line-height: 17px;
+    text-align: center;
   }
 }
