--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,13 +4,21 @@
   width: 24px;
   height: 24px;
   padding: 0;
-  background-color: transparent;
   align-self: center;
   margin-left: 18px;
-  background: url("../../../images/pencil.svg") 50% 50% no-repeat;
+  background: transparent url("../../../images/pencil.svg") 50% 50% no-repeat;
+  background-size: 10px 10px;
 }
 
 .profile__edit-button:hover {
   opacity: .6;
   transition: .25s;
+}
+
+@media screen and (max-width: 600px) {
+  .profile__edit-button {
+    background-size: 7.5px 7.5px;
+    width: 18px;
+    height: 18px;
+  }
 }
