--- a/pages/index.css
+++ b/pages/index.css
@@ -27,3 +27,4 @@
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
+@import url("../blocks/popup/__form/popup__form.css");
