--- a/blocks/place/__like-button/place__like-button.css
+++ b/blocks/place/__like-button/place__like-button.css
@@ -1,4 +1,4 @@
-.places__like-button {
+.place__like-button {
   background: url("../../../images/heart.svg") transparent;
   border: none;
   width: 22px;
@@ -7,7 +7,7 @@
   margin: 5px 30px 0 auto;
 }
 
-.places__like-button:hover {
+.place__like-button:hover {
   opacity: 0.5;
   transition: .25s;
 }
