--- a/blocks/place/__name/place__name.css
+++ b/blocks/place/__name/place__name.css
@@ -1,4 +1,4 @@
-.places__name {
+.place__name {
   margin: 0 0 0 21px;
   font-style: normal;
   font-weight: 900;
@@ -9,7 +9,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 200px;
+  max-width: 190px;
 }
 
 
