--- a/pages/index.css
+++ b/pages/index.css
@@ -13,11 +13,11 @@
 @import url("../blocks/profile/__add-button/profile__add-button.css");
 @import url("../blocks/places/places.css");
 @import url("../blocks/places/__list/places__list.css");
-@import url("../blocks/places/__list-item/places__list-item.css");
-@import url("../blocks/places/__name/places__name.css");
-@import url("../blocks/places/__image/places__image.css");
-@import url("../blocks/places/__like-button/places__like-button.css");
-@import url("../blocks/places/__like-button/_active/places__linke-button_active.css");
+@import url("../blocks/place/places.css");
+@import url("../blocks/place/__name/place__name.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__like-button/place__like-button.css");
+@import url("../blocks/place/__like-button/_active/place__linke-button_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/popup/popup.css");
