--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,15 +6,17 @@
   padding: 45px 0 60px;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
   .page {
     padding-left: 19px;
     padding-right: 19px;
   }
-}
+} */
 
 @media screen and (max-width: 750px) {
   .page {
     max-width: 620px;
+    padding-top: 28px;
+    padding-bottom: 36px;
   }
 }
