--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,14 @@
   flex-wrap: wrap;
   width: 100%;
   margin-bottom: 50px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1000px) {
+  .profile {
+    padding-left: 19px;
+    padding-right: 19px;
+  }
 }
 
 @media screen and (max-width: 600px) {
