--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,10 @@
 .footer {
   max-width: 100%;
 }
+
+@media screen and (max-width: 1000px) {
+  .footer {
+    padding-left: 19px;
+    padding-right: 19px;
+  }
+}
