--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,6 +3,12 @@
   height: 33px;
 }
 
+@media screen and (max-width: 1000px) {
+  .header__logo {
+    margin-left: 27px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .header__logo {
     width: 104px;
