--- a/pages/index.css
+++ b/pages/index.css
@@ -13,7 +13,7 @@
 @import url("../blocks/profile/__add-button/profile__add-button.css");
 @import url("../blocks/places/places.css");
 @import url("../blocks/places/__list/places__list.css");
-@import url("../blocks/place/places.css");
+@import url("../blocks/place/place.css");
 @import url("../blocks/place/__name/place__name.css");
 @import url("../blocks/place/__image/place__image.css");
 @import url("../blocks/place/__like-button/place__like-button.css");
