--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,5 +6,11 @@
   height: 100%;
   background: rgba(0, 0, 0, .5);
   z-index: 0;
-  display: none;
+  /* display: none; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.3s, opacity 0.3s;
 }
