--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url("../blocks/places/places.css");
 @import url("../blocks/places/__list/places__list.css");
 @import url("../blocks/place/place.css");
+@import url("../blocks/place/__delete-button/place__delete-button.css");
 @import url("../blocks/place/__name/place__name.css");
 @import url("../blocks/place/__image/place__image.css");
 @import url("../blocks/place/__like-button/place__like-button.css");
@@ -22,6 +23,9 @@
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__image-container/popup__image-container.css");
+@import url("../blocks/popup/__image/popup__image.css");
+@import url("../blocks/popup/__image-caption/popup__image-caption.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
