added webpack, form validation, new functionality

--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: -40px;
   right: -43px;
-  background: url('../../../images/Close\ Icon.svg') center center transparent;
+  background: url('../../../images/CloseIcon.svg') center center transparent;
   width: 32px;
   height: 32px;
   border: none;
