--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -3,7 +3,7 @@
   height: 27px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -12,7 +12,7 @@
   outline: none;
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
   margin-bottom: 48px;
 }
 
@@ -20,4 +20,4 @@
   .popup__input:last-of-type {
     margin-bottom: 45px;
   }
-}
+} */
