--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   max-width: 430px;
   width: 100%;
-  min-height: 330px;
+  /* min-height: 330px; */
   position: relative;
   z-index: 2;
   background: #FFFFFF;
