--- a/src/blocks/place/__like-button/place__like-button.css
+++ b/src/blocks/place/__like-button/place__like-button.css
@@ -4,7 +4,8 @@
   width: 22px;
   height: 19px;
   padding: 0;
-  margin: 5px 30px 0 auto;
+  /* margin: 5px 30px 0 auto; */
+  margin-bottom: 5px;
   cursor: pointer;
 }
 
