--- a/src/blocks/profile/__pic-overlay/profile__pic-overlay.css
+++ b/src/blocks/profile/__pic-overlay/profile__pic-overlay.css
@@ -1,13 +1,19 @@
 .profile__pic-overlay {
   position: absolute;
-
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 50%;
   z-index: 2;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
 }
 
 .profile__pic-overlay:hover {
   background: rgba(0, 0, 0, 0.808) url('/src/images/pencil.svg') no-repeat center/26px 26px;
 }
+
+
+/* @media screen and (max-width: 600px) {
+  .profile__pic-overlay {
+    margin: 0 auto 26px;
+  }
+} */
